# gdsc-bot

./: .gitignore  .pre-commit-config.yaml  JOURNAL.md  README.md  pyproject.toml
src/gdsc_bot/: __init__.py  __main__.py  responses.py
src/gdsc_bot/commands/: ai.py  hello.py  help.py  poll.py  remind.py  respond.py  summarize.py
