[project]
name = "gdsc-bot"
version = "0.1.0"
description = "Discord bot for GDSC Technical Task Round-2"
authors = [{ name = "Sourajyoti Basak", email = "wiz28@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{ include = "gdsc_bot", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
